# tg_retranslator

./: .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
general_utils/: loggers.py  utils.py
