[project]
name = "tg-retranslator"
version = "0.1.0"
description = "Retranslates pickled messages from a Redis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.17.0",
    "python-dotenv>=1.0.1",
    "redis[hiredis]>=5.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
